--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,6 @@
 <%= render 'users/userinfo', user: @user %>
-<%= render 'books/newbook', book: @booknew %>
+<%= render 'books/newbook', book: @book %>
 
-<div class="container">
-	<div class="row">
 		<div class="col-xs-9">
 			<h2>Books</h2>
 			<table class="table table-hover">
@@ -11,25 +9,27 @@
 						<th></th>
 						<th>Title</th>
 						<th>Opinion</th>
-						<th></th>
 					</tr>
 				</thead>
 				<tbody>
 					<% @books.each do |book| %>
 					<tr>
-						<td><%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %></td>
-						<td>
-							<%= link_to book_path(book.id) do %>
+						<td><%= link_to user_path(book.user.id) do %>
+							<%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %>
+							<% end %>
+						</td>
+						<td><%= link_to book_path(book.id) do %>
 								<%= book.title %>
 							<% end %>
 						</td>
 						<td><%= book.body %></td>
-						<td></td>
-						<% end %>
 					</tr>
+					<% end %>
 				</tbody>
 			</table>
 			<p class="text-right">CopyRight Infratop.inc</p>
 		</div>
 	</div>
 </div>
+
+
