--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,52 @@
   </head>
 
   <body>
+
+    <div class="header" id="header">
+      <div class="bg-info">
+      <nav class="navbar navbar-main navbar-shadow" role="navigation" id="slide-nav">
+        <div class="container relative">
+          <div class="navbar-header">
+            <span class="h3">Bookers</span>
+          </div>
+          <div id="slidemenu">
+            <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
+               <% if user_signed_in? %>
+              <li class="">
+                <%= link_to " Home", user_path(current_user.id), class: "glyphicon glyphicon-home" %>
+              </li>
+              <li class="">
+               <%= link_to ' Users', users_path, class: "glyphicon glyphicon-user" %>
+              </li>
+              <li class="">
+               <%= link_to ' Books', books_path, class: "glyphicon glyphicon-book" %>
+              </li>
+              <li class="">
+                <%= link_to ' Logout', destroy_user_session_path, method: :delete, class: "glyphicon glyphicon-log-out"  %>
+              </li>
+
+              <% else %>
+              <li class="">
+                <%= link_to " Home", root_path, class: "glyphicon glyphicon-home" %>
+              </li>
+              <li class="">
+                <%= link_to " About", home_about_path, class: "glyphicon glyphicon-link" %>
+              </li>
+              <li class="">
+                <%= link_to ' Signup', new_user_registration_path, class: "glyphicon glyphicon-edit" %>
+              </li>
+              <li class="">
+                <%= link_to ' Login', user_session_path, class: "glyphicon glyphicon-log-in" %>
+              </li>
+
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      </div>
+    </div>
+
     <%= yield %>
   </body>
 </html>
