--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,17 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ #header {
+	background-color: black;
+ }
+ .header_title {
+ 	color: white;
+ }
+ .color-gray {
+ 	color: gray;
+ }
+ .color-gray:hover {
+ 	color: white;
+ 	background-color: transparent;
+ }
