--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
 					<% @books.each do |book| %>
 					<tr>
 						<td><%= link_to user_path(book.user.id) do %>
-							<%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %>
+							<%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %>
 							<% end %>
 						</td>
 						<td><%= link_to book_path(book.id) do %>
