--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,10 @@
 			<table class="table">
 				<tbody>
 					<tr>
-						<td><%= attachment_image_tag @book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %></td>
+						<td><%= link_to user_path(@book.user.id) do %>
+							<%= attachment_image_tag @book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %><%= @book.user.name %>
+							<% end %>
+							</td>
 						<td><%= @book.title %></td>
 						<td><%= @book.body %></td>
 					  	<% if @book.user == current_user %>
