--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,48 +12,44 @@
   <body>
 
     <div class="header" id="header">
-      <div class="bg-info">
       <nav class="navbar navbar-main navbar-shadow" role="navigation" id="slide-nav">
         <div class="container relative">
           <div class="navbar-header">
-            <span class="h3">Bookers</span>
+            <h3 class="header_title">Bookers</h3>
           </div>
           <div id="slidemenu">
-            <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
+            <ul class="nav navbar-nav navbar-right">
                <% if user_signed_in? %>
               <li class="">
-                <%= link_to " Home", user_path(current_user.id), class: "glyphicon glyphicon-home" %>
+                <%= link_to " Home", user_path(current_user.id), class: "glyphicon glyphicon-home color-gray" %>
               </li>
               <li class="">
-               <%= link_to ' Users', users_path, class: "glyphicon glyphicon-user" %>
+               <%= link_to ' Users', users_path, class: "glyphicon glyphicon-user color-gray" %>
               </li>
               <li class="">
-               <%= link_to ' Books', books_path, class: "glyphicon glyphicon-book" %>
+               <%= link_to ' Books', books_path, class: "glyphicon glyphicon-book color-gray" %>
               </li>
               <li class="">
-                <%= link_to ' Logout', destroy_user_session_path, method: :delete, class: "glyphicon glyphicon-log-out"  %>
+                <%= link_to ' Logout', destroy_user_session_path, method: :delete, class: "glyphicon glyphicon-log-out color-gray"  %>
               </li>
-
               <% else %>
               <li class="">
-                <%= link_to " Home", root_path, class: "glyphicon glyphicon-home" %>
+                <%= link_to " Home", root_path, class: "glyphicon glyphicon-home color-gray" %>
               </li>
               <li class="">
-                <%= link_to " About", home_about_path, class: "glyphicon glyphicon-link" %>
+                <%= link_to " About", home_about_path, class: "glyphicon glyphicon-link color-gray" %>
               </li>
               <li class="">
-                <%= link_to ' Signup', new_user_registration_path, class: "glyphicon glyphicon-edit" %>
+                <%= link_to ' Signup', new_user_registration_path, class: "glyphicon glyphicon-edit color-gray" %>
               </li>
               <li class="">
-                <%= link_to ' Login', user_session_path, class: "glyphicon glyphicon-log-in" %>
+                <%= link_to ' Login', user_session_path, class: "glyphicon glyphicon-log-in color-gray" %>
               </li>
-
               <% end %>
             </ul>
           </div>
         </div>
       </nav>
-      </div>
     </div>
 
     <%= yield %>
