--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,5 @@
-
-			<%= render 'users/userinfo', user: @user %>
-
-			<%= render 'books/newbook', book: @booknew %>
-
+<%= render 'users/userinfo', user: @user %>
+<%= render 'books/newbook', book: @booknew %>
 		<div class="col-xs-9">
 			<h2>Users</h2>
 			<table class="table">
@@ -16,7 +13,7 @@
 				<tbody>
 					<% @users.each do |user| %>
 					<tr>
-						<td><%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %></td>
+						<td><%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %></td>
 						<td><%= user.name %></td>
 						<td><%= link_to "Show", user_path(user.id) %></td>
 					</tr>
