--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,5 @@
 <%= render 'users/userinfo', user: @user %>
 <%= render 'books/newbook', book: @booknew %>
-
-<div class="container">
-	<div class="row">
 		<div class="col-xs-9">
 			<h2>Books</h2>
 			<table class="table table-hover">
@@ -16,8 +13,9 @@
 				</thead>
 				<tbody>
 					<% @books.each do |book| %>
+					<% if book.user == current_user %>
 					<tr>
-						<td><%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %></td>
+						<td><%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %></td>
 						<td>
 							<%= link_to book_path(book.id) do %>
 								<%= book.title %>
@@ -25,7 +23,8 @@
 						</td>
 						<td><%= book.body %></td>
 						<td></td>
-						<% end %>
+					<% end %>
+				    <% end %>
 					</tr>
 				</tbody>
 			</table>
