--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,16 @@
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 			<h1>Editing Book</h1>
+			<% if @book.errors.any? %>
+			<div id="error_explanation">
+				<h2 class="text-danger"><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
+				<ul>
+					<% @book.errors.full_messages.each do |message| %>
+					<li class="text-danger"><%= message %></li>
+					<% end %>
+				</ul>
+			</div>
+			<% end %>
 			<%= form_for(@book) do |f| %>
 				<div class="field">
 					<h4>Title</h4>
