--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,16 @@
+<div class="container">
+	<% if @booknew.errors.any? %>
+	<div id="error_explanation">
+		<h2 class="text-danger"><%= @booknew.errors.count %> errors prohibited this obj from being saved:</h2>
+		<ul>
+			<% @booknew.errors.full_messages.each do |message| %>
+			<li class="text-danger"><%= message %></li>
+			<% end %>
+		</ul>
+	</div>
+	<% end %>
 <%= render 'users/userinfo', user: @user %>
-<%= render 'books/newbook', book: @book %>
-
+<%= render 'books/newbook', book: @booknew %>
 		<div class="col-xs-9">
 			<h2>Books</h2>
 			<table class="table table-hover">
