--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= render 'users/userinfo', user: @user %>
 <%= render 'books/newbook', book: @booknew %>
 		<div class="col-xs-9">
