--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,22 @@
  	color: white;
  	background-color: transparent;
  }
+
+ .image1 {
+	background-color: url(image1.jpg);
+}
+.image2 {
+	background-color: url(image2.jpg);
+}
+.image3 {
+	background-color: url(image3.jpg);
+}
+.image4 {
+	background-color: url(image4.jpg);
+}
+.image5 {
+	background-color: url(image5.jpg);
+}
+#container {
+	height: 500px;
+}
