--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+
 	<% if @booknew.errors.any? %>
 	<div id="error_explanation">
 		<h2 class="text-danger"><%= @booknew.errors.count %> errors prohibited this obj from being saved:</h2>
@@ -19,6 +20,8 @@
 						<th></th>
 						<th>Title</th>
 						<th>Opinion</th>
+						<th></th>
+						<th></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -33,6 +36,19 @@
 							<% end %>
 						</td>
 						<td><%= book.body %></td>
+						<td><% if book.favorited_by?(current_user) %>
+    							<%= link_to book_favorites_path(book), method: :delete do %>
+      								<i class="fa fa-heart" aria-hidden="true" style="color: blue;"></i>
+      								<%= book.favorites.count %>
+   							 	<% end %>
+							<% else %>
+    							<%= link_to book_favorites_path(book), method: :post do %>
+      								<i class="fa fa-heart-o" aria-hidden="true"></i>
+     								 <%= book.favorites.count %>
+   								 <% end %>
+							<% end %>
+						</td>
+						<td><p>コメント数 : <%= book.book_comments.count %></p></td>
 					</tr>
 					<% end %>
 				</tbody>
