--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,13 +12,49 @@
 							</td>
 						<td><%= @book.title %></td>
 						<td><%= @book.body %></td>
-					  	<% if @book.user == current_user %>
+						<td><% if @book.favorited_by?(current_user) %>
+								<%= link_to book_favorites_path(@book), method: :delete do %>
+      								<i class="fa fa-heart" aria-hidden="true" style="color: blue;"></i>
+      								<%= @book.favorites.count %>
+      							<% end %>
+      						<% else %>
+      							<%= link_to book_favorites_path(@book), method: :post do %>
+      								<i class="fa fa-heart-o" aria-hidden="true"></i>
+      								<%= @book.favorites.count %>
+      							<% end %>
+      						<% end %>
+						</td>
+						<td><p>コメント数 : <%= @book.book_comments.count %></p>
+						</td>
+					  		<% if @book.user == current_user %>
 						<td><%= link_to "Edit", edit_book_path, class: "btn btn-success" %></td>
 						<td><%= link_to "Destroy", book_path, method: :delete, class: "btn btn-danger", data: { confirm: "本当に消しますか?" } %></td>
-					  	<% end %>
+					  		<% end %>
 					</tr>
 				</tbody>
 			</table>
+
+			<!-- コメントフォーム　-->
+			<%= form_for [@book, @book_comment] do |f| %>
+				<div>
+					  <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+				</div>
+				<%= f.submit "送信する", class: "btn btn btn-primary pull-right" %>
+			<% end %>
+
+			<!-- コメント表示　-->
+			<% @book.book_comments.each do |book_comment| %>
+					<div class="comment-data">
+					 	<div class="comment-author">
+					 	  	<%= book_comment.user.name %>
+					 	  	<span class="comment-date"><%= book_comment.created_at.strftime('%Y/%m/%d') %></span>
+					 	</div>
+					 	<div class="comment"><%= book_comment.comment %></div>
+					</div>
+					<% if book_comment.user == current_user %>
+						<%= link_to "Destroy", book_book_comment_path(book_comment.id, book_comment.book.id), method: :delete, class: "btn btn-danger", data: { confirm: "本当に消しますか?" } %>
+					<% end %>
+			<% end %>
 			<p class="text-right">CopyRight Infratop.inc</p>
 		</div>
 	</div>
