--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -37,12 +37,12 @@
 						</td>
 						<td><%= book.body %></td>
 						<td><% if book.favorited_by?(current_user) %>
-    							<%= link_to book_favorites_path(book), method: :delete do %>
+    							<%= link_to book_favorites_path, method: :delete do %>
       								<i class="fa fa-heart" aria-hidden="true" style="color: blue;"></i>
       								<%= book.favorites.count %>
    							 	<% end %>
 							<% else %>
-    							<%= link_to book_favorites_path(book), method: :post do %>
+    							<%= link_to book_favorites_path, method: :post do %>
       								<i class="fa fa-heart-o" aria-hidden="true"></i>
      								 <%= book.favorites.count %>
    								 <% end %>
