--- a/app/views/relationships/follower.html.erb
+++ b/app/views/relationships/follower.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
-<%= render 'users/userinfo', user: @user %>
-<%= render 'books/newbook', book: @booknew %>
+	<div class="row">
 		<div class="col-xs-9">
-			<h2>Users</h2>
+			<h2>Follower Users</h2>
 			<table class="table">
 				<thead>
 					<tr>
@@ -12,7 +11,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<% @users.each do |user| %>
+					<% @follows.each do |user| %>
 					<tr>
 						<td><%= attachment_image_tag user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %></td>
 						<td><%= user.name %></td>
@@ -37,6 +36,3 @@
 		</div>
 	</div>
 </div>
-
-
-
