--- a/app/views/users/_userinfo.html.erb
+++ b/app/views/users/_userinfo.html.erb
@@ -11,14 +11,36 @@
 					<tr>
 						<th>name</th>
 						<th><%= user.name %></th>
-						<th></th>
 					</tr>
 					<tr>
 						<th>introduction</th>
 						<th><%= user.introduction %></th>
 					</tr>
+					<tr>
+						<th>follows</th>
+						<th><%= link_to user_followers_path(user.id) do %>
+								<%= user.followers.count %>
+							<% end %>
+						</th>
+					</tr>
+					<tr>
+						<th>followers</th>
+						<th><%= link_to user_follows_path(user.id) do %>
+								<%= user.followings.count %>
+							<% end %>
+						</th>
+					</tr>
 				</tbody>
 			</table>
-			<%= link_to edit_user_path(user.id) do %>
-				<button type="button" class="btn btn-default col-xs-12" aria-label="Left Align"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></button>
+			<% if user != current_user %>
+				<% if current_user.following?(user) %>
+					<%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete, class: "btn btn-primary col-xs-12" %>
+				<% else %>
+					<%= link_to 'フォローする', user_relationships_path(user.id), method: :POST, class: "btn btn-success col-xs-12" %>
+				<% end %>
+			<% end %>
+			<% if user == current_user %>
+				<%= link_to edit_user_path(user.id) do %>
+					<button type="button" class="btn btn-default col-xs-12" aria-label="Left Align"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></button>
+				<% end %>
 			<% end %>
