--- a/app/views/relationships/follower.html.erb
+++ b/app/views/relationships/follower.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-9">
-			<h2>Follower Users</h2>
+			<h2>Follow Users</h2>
 			<table class="table">
 				<thead>
 					<tr>
