--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -55,8 +55,8 @@
 						<%= link_to "Destroy", book_book_comment_path(book_comment.id, book_comment.book.id), method: :delete, class: "btn btn-danger", data: { confirm: "本当に消しますか?" } %>
 					<% end %>
 			<% end %>
-			<p class="text-right">CopyRight Infratop.inc</p>
 		</div>
+		<div><p class="text-right">CopyRight Infratop.inc</p></div>
 	</div>
 </div>
 
