--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,7 +25,23 @@
 					</tr>
 				</thead>
 				<tbody>
-					<%= render 'books/book', books: @books %>
+					<% @books.each do |book| %>
+					<tr>
+						<td><%= link_to user_path(book.user.id) do %>
+							<%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %>
+							<% end %>
+						</td>
+						<td><%= link_to book_path(book.id) do %>
+								<%= book.title %>
+							<% end %>
+						</td>
+						<td><%= book.body %></td>
+						<td id="favorite-<%= book.id %>">
+							<%= render partial: 'favorites/favorite', locals: { book: book} %>
+						</td>
+						<td><p>コメント数 : <%= book.book_comments.count %></p></td>
+					</tr>
+					<% end %>
 				</tbody>
 			</table>
 			<p class="text-right">CopyRight Infratop.inc</p>
