--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,17 +23,8 @@
 							<% end %>
 						</td>
 						<td><%= book.body %></td>
-						<td><% if book.favorited_by?(current_user) %>
-								<%= link_to book_favorites_path(book), method: :delete do %>
-									<i class="fa fa-heart" aria-hidden="true" style="color: blue;"></i>
-									<%= book.favorites.count %>
-								<% end %>
-							<% else %>
-								<%= link_to book_favorites_path(book), method: :post do %>
-									<i class="fa fa-heart-o" aria-hidden="true"></i>
-									<%= book.favorites.count %>
-								<% end %>
-							<% end %>
+						<td id="favorite-<%= book.id %>">
+							<%= render partial: 'favorites/favorite', locals: { book: book} %>
 						</td>
 						<td><p>コメント数 : <%= book.book_comments.count %></p></td>
 					<% end %>
