--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,28 +24,12 @@
 					</tr>
 				</tbody>
 			</table>
-
-			<!-- コメントフォーム　-->
-			<%= form_for [@book, @book_comment] do |f| %>
-				<div>
-					  <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
-				</div>
-				<%= f.submit "送信する", class: "btn btn btn-primary pull-right" %>
-			<% end %>
-
-			<!-- コメント表示　-->
-			<% @book.book_comments.each do |book_comment| %>
-					<div class="comment-data">
-					 	<div class="comment-author">
-					 	  	<%= book_comment.user.name %>
-					 	  	<span class="comment-date"><%= book_comment.created_at.strftime('%Y/%m/%d') %></span>
-					 	</div>
-					 	<div class="comment"><%= book_comment.comment %></div>
-					</div>
-					<% if book_comment.user == current_user %>
-						<%= link_to "Destroy", book_book_comment_path(book_comment.id, book_comment.book.id), method: :delete, class: "btn btn-danger", data: { confirm: "本当に消しますか?" } %>
-					<% end %>
-			<% end %>
+			<div id="comments-<%= @book_comment.id %>">
+				<%= render partial: 'book_comments/comment', locals: { book: @book} %>
+			</div>
+			<div id="comment_form">
+				<%= render partial: 'book_comments/form', locals: { book: @book, book_comment: @book_comment} %>
+			</div>
 		</div>
 		<div><p class="text-right">CopyRight Infratop.inc</p></div>
 	</div>
