--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -2,12 +2,13 @@
 <% book.book_comments.each do |book_comment| %>
 	<div class="comment-data">
 		<div class="comment-author">
+			<%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %>
 			<%= book_comment.user.name %>
 				<span class="comment-date"><%= book_comment.created_at.strftime('%Y/%m/%d') %></span>
+			<div class="comment"><%= book_comment.comment %></div>
+			<% if book_comment.user == current_user %>
+				<%= link_to "Destroy", book_book_comment_path(book_comment.id, book_comment.book.id), method: :delete, remote: true, class: "btn btn-danger" %>
+			<% end %>
 		</div>
-		<div class="comment"><%= book_comment.comment %></div>
 	</div>
-	<% if book_comment.user == current_user %>
-		<%= link_to "Destroy", book_book_comment_path(book_comment.id, book_comment.book.id), method: :delete, remote: true, class: "btn btn-danger" %>
-	<% end %>
 <% end %>
