--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,22 +18,22 @@
 
   <div class="field">
     <%= f.label :postal_code %><br />
-    <%= f.text_field :postal_code, autofocus: true, class: "postal_code" %>
+    <%= f.text_field :postal_code, autofocus: true, class: "postal_code", id: "address_zipcode" %>
   </div>
 
   <div class="field">
     <%= f.label :prefecture_code %><br>
-    <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name, class: "address" %>
+    <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :name, :name, class: "address" %>
   </div>
 
   <div class="field">
     <%= f.label :city %><br>
-    <%= f.text_field :city, autofocus: true, class: "address" %>
+    <%= f.text_field :city, autofocus: true, class: "address", id:"address_city" %>
   </div>
 
   <div class="field">
     <%= f.label :street %><br>
-    <%= f.text_field :street, autofocus: true, class: "address" %>
+    <%= f.text_field :street, autofocus: true, class: "address", id: "address_street" %>
   </div>
 
   <div class="field">
