--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-<%= render 'users/userinfo', user: @user %>
-<%= render 'books/newbook', book: @booknew %>
+	<%= render 'users/userinfo', user: @user %>
+	<%= render 'books/newbook', book: @booknew %>
 		<div class="col-xs-9">
 			<h2>Books</h2>
 			<table class="table table-hover">
@@ -32,7 +32,62 @@
 					</tr>
 				</tbody>
 			</table>
-			<p class="text-right">CopyRight Infratop.inc</p>
+		</div>
+
+	<!--Map-->
+	<%if @user == current_user %>
+	<div class="row">
+		<div class="col-xs-12">
+			<h2>Your Map</h2>
+			<div id='map' class="<%= @user.prefecture_code + @user.city + @user.street %>"></div>
+			<style>
+			#map{
+			  height: 500px;
+			}
+			</style>
+			<script>
+			/*
+			mapを関数の外で定義(codeAddressでも使うため)
+			geocoderを用意
+			*/
+
+			let map
+			let geocoder
+
+			function initMap(){
+			  // geocoderを初期化
+ 			 geocoder = new google.maps.Geocoder()
+			 geocoder.geocode( { 'address': $('#map').attr('class')}, function(results, status) {
+			    if (status == 'OK') {
+　　　　　　　　　　　　// map.setCenterで地図が移動
+			      map.setCenter(results[0].geometry.location);
+
+　　　　　　　　　　　　// google.maps.MarkerでGoogleMap上の指定位置にマーカが立つ
+			      var marker = new google.maps.Marker({
+			          map: map,
+			          position: results[0].geometry.location
+			      });
+			    } else {
+			      alert('Geocode was not successful for the following reason: ' + status);
+			    }
+			  });
+
+			  map = new google.maps.Map(document.getElementById('map'), {
+			  center: {lat: -34.397, lng: 150.644},
+			  zoom: 12
+			  });
+			}
+
+			function codeAddress(){
+			  // 入力を取得
+			  let inputAddress = document.getElementById('address').value;
+
+ 			 // geocodingしたあとmapを移動
+			}
+			</script>
+			<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['API_KEY'] %>&callback=initMap" async defer></script>
 		</div>
 	</div>
+	<% end %>
+	<p class="text-right">CopyRight Infratop.inc</p>
 </div>
