--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -24,6 +24,10 @@
 				<label for="user_introduction">Introduction</label>
 				 <%= f.text_area :introduction %>
 			</div>
+			<div>
+				<label for="user_email">mail</label>
+				<%= f.text_field :email %>
+			</div>
 			<%= f.submit "Update User" %>
 		<% end %>
 			<p class="text-right">CopyRight Infratop.inc</p>
